# cloud-cost-recommendation-with-llm

./: .env  .env.example  .gitignore  ARCHITECTURE.md  CUSTOM_CONDITIONS.md  README.md  REQUIREMENT.md  REQUIREMENTS.md  custom_rules_analysis_report.json  main.py  pyproject.toml  pytest.ini  report.json  requirement.md  requirements.txt  setup.py  test_report.json  trace_evidence.py  transform_cli_data.py
config/: alb_agent.yaml  aws.alb_agent.yaml  aws.cloudfront_agent.yaml  aws.ebs_agent.yaml  aws.elasticip_agent.yaml  aws.gwlb_agent.yaml  aws.nlb_agent.yaml  aws.rds_agent.yaml  aws.s3_agent.yaml  aws.sqs_agent.yaml  azure.cdn_agent.yaml  azure.functions_agent.yaml  azure.natgateway_agent.yaml  azure.publicip_agent.yaml  azure.vm_agent.yaml  azure_vm_agent.yaml  cloudfront_agent.yaml  coordinator.yaml  dynamodb_agent.yaml  ebs_agent.yaml  ec2_agent.yaml  efs_agent.yaml  elasticip_agent.yaml  gcp.compute_agent.yaml  gcp.disk_agent.yaml  gcp.firestore_agent.yaml  gcp.loadbalancer_agent.yaml  gwlb_agent.yaml  lambda_agent.yaml  natgateway_agent.yaml  nlb_agent.yaml  rds_agent.yaml  rds_snapshots_agent.yaml  s3_agent.yaml  sns_agent.yaml  sqs_agent.yaml  vpcendpoints_agent.yaml
config/global/: coordinator.yaml
data/billing/: cli_billing.csv  sample_billing.csv
data/cli/: cloudfront_bytes_metrics_1.json  cloudfront_distributions_list.json  contest-prompt.txt  ebs_read_ops_metrics.json  ebs_snapshot_details.json  ebs_volume_details.json  ebs_volume_details.json:Zone.Identifier  ec2_network_in_metrics_i-0fa16698357c707c7.json  efs_access_points.json  efs_connections_metrics.json  efs_file_system_details.json  elastic_ip_cus360-new-ip.json  elastic_ip_cus360-new-ip_idle_days.json  elb_QAIDemoHub-OCR-AI-v2-1.json  lambda_duration_metrics.json  lambda_errors_metrics.json  lambda_function_config.json  lambda_function_details.json  lambda_function_policy.json  lambda_invocations_metrics.json  s3_bucket_contents.txt  s3_bucket_eip_finops_analysis.json
data/inventory/: cli_inventory.json  sample_inventory.json
data/metrics/: cli_metrics.csv  sample_metrics.csv
docs/: API.md  ARCHITECTURE.md  BASIC_DESIGN.md  CUSTOM_CONDITIONS.md  REQUIREMENT.md  TESTING.md
llm_cost_recommendation/: __init__.py  __main__.py  api.py  cli.py  console.py
llm_cost_recommendation/agents/: __init__.py  agent_manager.py  base.py  coordinator.py  recommendation_processor.py  report_generator.py  resource_processor.py
llm_cost_recommendation/models/: __init__.py  agents.py  api_models.py  conditions.py  metrics.py  pricing.py  recommendations.py  resources.py  types.py
llm_cost_recommendation/services/: __init__.py  conditions.py  config.py  data_validation.py  enhanced_prompts.py  ingestion.py  llm.py  logging.py  pricing.py  pricing_manager.py  prompts.py
llm_cost_recommendation/utils/: __init__.py  logging.py
src/: __init__.py
src/agents/: __init__.py  base.py  coordinator.py
src/models/: __init__.py
src/services/: ingestion.py
tests/: conftest.py
tests/api/: test_api_security.py
tests/config/: test_configuration_issues.py
tests/e2e/: test_analyze_comprehensive.py  (+12 more)
(+166 files in other folders)
